Added UI to display and edit the dev hosts list in ToolsPanel.java

--- a/cnd.remote/src/org/netbeans/modules/cnd/remote/ui/Bundle.properties
+++ b/cnd.remote/src/org/netbeans/modules/cnd/remote/ui/Bundle.properties
@@ -53,3 +53,11 @@ LBL_PSM_TypeitAlways=Enter password every time
 FMT_SharedPasswordSource=Share password from {1}@{0}
 cbxSetAsDefault=Set as Default
 MNEM_SetAsDefault=S
+LBL_Close=Close
+LBL_AddServer=Add...
+LBL_RemoveServer=Remove
+LBL_SetAsDefault=Set As Default
+LBL_ServerList=Development Hosts:
+
+TITLE_AddNewServer=Add New Server
+BTN_OK=OK
