Added module web.client.tools.internetexplorer to nb.cluster.webcommon

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -1180,6 +1180,7 @@ nb.cluster.webcommon=\
         web.client.tools.common,\
         web.client.tools.firefox,\
         web.client.tools.firefox.extension,\
+        web.client.tools.internetexplorer,\
         web.client.tools.impl,\
         web.client.tools.kit
 
