--- a/projectui/src/org/netbeans/modules/project/ui/actions/Bundle.properties
+++ b/projectui/src/org/netbeans/modules/project/ui/actions/Bundle.properties
@@ -63,8 +63,8 @@ LBL_SelectInProjectsAction_Name=Select Node in Projects
 LBL_SelectInFilesAction_Name=Select Node in Files
 LBL_SelectInProjectsAction_MenuName=Projects
 LBL_SelectInFilesAction_MenuName=Files
-LBL_SelectInProjectsAction_MainMenuName=Select in Projects
-LBL_SelectInFilesAction_MainMenuName=Select in Files
+LBL_SelectInProjectsAction_MainMenuName=Select in Pro&jects
+LBL_SelectInFilesAction_MainMenuName=Sele&ct in Files
 
 # {0} number of project
 # {1} the first project name
