broken build fix: visualweb.gravy temporary disabled due unsatisfied org-netbeans-soa-libs-httpunit.jar dependency.

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -846,8 +846,7 @@ nb.cluster.visualweb=\
         visualweb.webui.jsf.defaulttheme,\
         visualweb.webui.themes,\
         visualweb.woodstock.webui.jsf,\
-        visualweb.xhtml,\
-        visualweb.gravy
+        visualweb.xhtml
 
 nb.cluster.soa.dir=soa2
 nb.cluster.soa.depends=\
