add bluej modules to stable uc list

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -943,6 +943,8 @@ nb.cluster.stableuc=\
         o.apache.jmeter.kit,\
         o.apache.jmeter.module,\
         o.apache.tools.ant.module.docs,\
+	o.n.bluej,\
+	o.n.bluej.ui,\
         profiler.loadgen,\
         projectimport,\
         projectimport.jbuilder,\
