http://deadlock.netbeans.org/hudson/job/trunk/2728/testReport/org.netbeans.nbbuild/DeleteUnreferencedClusterFiles/testExtraFiles/

--- a/j2me.cdc.project.bdj/nbproject/project.properties
+++ b/j2me.cdc.project.bdj/nbproject/project.properties
@@ -42,7 +42,7 @@ javac.compilerargs=-Xlint -Xlint:-serial
 
 ant.jar=${ant.core.lib}
 extra.module.files=\
-    modules/ext/org-netbeans-modules-j2me-cdc-project-bdj.jar,\
-    modules/ext/bcprov-jdk15-139.jar,\
-    modules/ext/bdjo.jar,\
-    modules/ext/security.jar
+    modules/ext/org-netbeans-modules-j2me-cdc-project-bdj.jar
+release.external/bcprov-jdk15-139.jar=modules/ext/bcprov-jdk15-139.jar
+release.external/bdjo.jar=modules/ext/bdjo.jar
+release.external/security.jar=modules/ext/security.jar
