http://deadlock.netbeans.org/hudson/job/trunk/2728/testReport/org.netbeans.core.projects/ValidateLayerConsistencyTest/testIfOneFileIsDefinedTwiceByDifferentModulesTheyNeedToHaveMutualDependency/

--- a/j2me.cdc.project.bdj/src/org/netbeans/modules/j2me/cdc/project/bdj/Bundle.properties
+++ b/j2me.cdc.project.bdj/src/org/netbeans/modules/j2me/cdc/project/bdj/Bundle.properties
@@ -65,7 +65,7 @@ LBL_DeploymentDir=&Deployment Directory:
 LBL_BrowseWorkDir=&Browse...
 TITLE_BrowseDeploymentDir=Browse Deployment Directory
 
-#Templates/Project/Samples/J2ME=CDC
+Templates/Project/Samples/J2ME=CDC
 Templates/Project/Samples/J2ME/CDC/BD-J=BD-J
 Templates/Project/Samples/J2ME/CDC/BD-J/GunBunny.zip=Gun Bunny sample
 Templates/Project/Samples/J2ME/CDC/BD-J/ImageDrop.zip=Image Drop sample
