--- a/javascript.libraries/src/org/netbeans/modules/javascript/libraries/ui/Bundle.properties
+++ b/javascript.libraries/src/org/netbeans/modules/javascript/libraries/ui/Bundle.properties
@@ -34,11 +34,30 @@
 # Contributor(s):
  
 # Portions Copyrighted 2008 Sun Microsystems, Inc.
-CustomizerJSLibraries.libLocationJLabel.text=&Library Location:
-CustomizerJSLibraries.librariesListLabel.text=&JavaScript Libraries:
-CustomizerJSLibraries.removeLibraryJButton.text=&Remove
-CustomizerJSLibraries.addLibraryJButton.text=&Add...
+BrokenReferencesCustomizer.libraryListLabel.text=Reference &Problems:
+BrokenReferencesCustomizer.resolveRefsButton.text=&Resolve...
+BrokenReferencesCustomizer.librariesList.AccessibleContext.accessibleName=Unresolved Libraries
+BrokenReferencesCustomizer.librariesList.AccessibleContext.accessibleDescription=List of Unresolved Libraries
+BrokenReferencesCustomizer.resolveRefsButton.AccessibleContext.accessibleDescription=Resolve reference problems
+BrokenReferencesCustomizer.descriptionLabel.text=&Description:
+BrokenReferencesCustomizer.description.AccessibleContext.accessibleName=Description text
+BrokenReferencesCustomizer.description.AccessibleContext.accessibleDescription=This text area describes the reason for the reference problem
 
-CustomizerJSLibraries_MissingReference=Missing Library: "{0}"
+LBL_BrokenReferenceCustomizer_BrokenLibrary="{0}" library could not be found.
+LBL_BrokenReferenceCustomizer_MismatchLibrary="{0}" library exists but is not a JavaScript library.
 
-LBL_Config_JavaScript_Libraries=JavaScript Libraries
+BrokenReferencesCustomizer_BrokenLibraryDesc=\
+    Problem: The project uses a JavaScript library called "{0}", but this \
+    library was not found.\n\
+    Solution: Click Resolve to open the Library Manager and create a new \
+    JavaScript library called "{0}".
+
+BrokenReferencesCustomizer_MismatchLibraryDesc=\
+    Problem: The project uses a JavaScript library called "{0}", but a \
+    non-JavaScript library with this name was found.\n\
+    Solution: Click Resolve to open the Library Manager and create a new \
+    JavaScript library called "{0}" after removing the existing library with \
+    that name.  Alternatively, open the Project Properties dialog and remove the \
+    JavaScript library reference called "{0}".
+
+BrokenReferenceCustomizer_DialogTitle=Resolve Reference Problems - "{0}" Project
