--- a/web.project/src/org/netbeans/modules/web/project/ui/Bundle.properties
+++ b/web.project/src/org/netbeans/modules/web/project/ui/Bundle.properties
@@ -75,6 +75,7 @@ LBL_NoSelectedServerWarning_jLabel2=Please select one from the list below.
 CTL_NoSelectedServerWarning_Title=Warning - Select Server
 
 LBL_Fix_Broken_Links_Action=Resolve Reference Problems...
+LBL_Fix_Broken_JavaScriptLibraries_Action=Resolve JavaScript Library Problems...
 
 LBL_serveltExecutionUriAction=Set Servlet Execution URI
 
