--- a/groovy.grailsproject/src/org/netbeans/modules/groovy/grailsproject/ui/Bundle.properties
+++ b/groovy.grailsproject/src/org/netbeans/modules/groovy/grailsproject/ui/Bundle.properties
@@ -1,3 +1,4 @@
+FetchingPlugins=Please wait... Fetching list of plugins from server
 GeneralCustomizerPanel.projectFolderLabel.text=Project Directory:
 GeneralCustomizerPanel.projectFolderTextField.text=
 GeneralCustomizerPanel.activeGrailsEnvironmentLabel.text=Active Grails Enviroment:
@@ -14,3 +15,6 @@ LBL_RunAction_Name=Run
 LBL_TestAction_Name=Test
 LBL_CleanAction_Name=Clean
 LBL_ShellAction_Name=Grails Shell
+
+TITLE_BrowsePluginLocation=Browse Plugin Location
+LBL_BrowsePluginLocation_OK_Button=OK
