#138003: empty code name base + info message

--- a/apisupport.project/src/org/netbeans/modules/apisupport/project/ui/wizard/Bundle.properties
+++ b/apisupport.project/src/org/netbeans/modules/apisupport/project/ui/wizard/Bundle.properties
@@ -130,3 +130,5 @@ ACS_CTL_BrowseLibraries=Browse Libraries jars
 ACS_CTL_BrowseLicense=Browse License file
 ACS_CTL_Library=Library jars
 ACS_CTL_License=License file
+LBL_CodeNameBaseHint=(e.g. "org.yourorg.modulename")
+MSG_EmptyCNB=Please specify code name base
