--- a/cnd.remote/src/org/netbeans/modules/cnd/remote/actions/Bundle.properties
+++ b/cnd.remote/src/org/netbeans/modules/cnd/remote/actions/Bundle.properties
@@ -40,6 +40,6 @@ LBL_SetDefaultAction=Set as Default
 LBL_DeleteServerAction=Delete
 LBL_DisplayPathMapperAction=Display Path Mapper...
 
-BTN_OK=Ok
+BTN_OK=OK
 TITLE_AddNewServer=Add New Server
 LBL_AddNewServer=Add New Server
