Find usages of Java classes in Groovy

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -655,6 +655,7 @@ nb.cluster.groovy=\
         groovy.grailsproject,\
         groovy.gsp,\
         groovy.kit,\
+        groovy.refactoring,\
         groovy.support
 
 nb.cluster.ruby.dir=ruby2
