--- a/groovy.grailsproject/src/org/netbeans/modules/groovy/grailsproject/ui/Bundle.properties
+++ b/groovy.grailsproject/src/org/netbeans/modules/groovy/grailsproject/ui/Bundle.properties
@@ -12,6 +12,7 @@ GeneralCustomizerPanel.prod=Production
 GeneralCustomizerPanel.test=Test
 
 LBL_RunAction_Name=Run
+LBL_DebugAction_Name=Debug
 LBL_TestAction_Name=Test
 LBL_CleanAction_Name=Clean
 LBL_ShellAction_Name=Grails Shell
