--- a/php.project/src/org/netbeans/modules/php/project/ui/options/Bundle.properties
+++ b/php.project/src/org/netbeans/modules/php/project/ui/options/Bundle.properties
@@ -35,6 +35,10 @@
 #
 # Portions Copyrighted 2008 Sun Microsystems, Inc.
 
+PHPOptionsCategory_name=PHP
+PHPOptionsCategory_title=PHP
+LBL_GeneralOPtions=General Options
+
 # PHP options
 LBL_SelectPhpInterpreter=Select PHP Interpreter
 LBL_AddFolder=Add &Folder...
@@ -59,11 +63,8 @@ MSG_PhpNotFile=PHP Interpreter is not a valid file.
 MSG_PhpCannotRead=PHP Interpreter cannot be read.
 MSG_DebuggerInvalidPort=Invalid debugger port.
 
-# php 
+# php
 LBL_PhpInterpreters=PHP Interpreters:
 LBL_PleaseWait=Please wait, searching for PHP Interpreters...
 LBL_PhpInterpretersTitle=PHP interpreters
 LBL_NoPhpInterpretersFound=No PHP Interpreters found.
-
-PHPOptionsCategory_name=PHP
-PHPOptionsCategory_title=PHP
