--- a/web.client.tools.impl/src/org/netbeans/modules/web/client/tools/impl/projects/Bundle.properties
+++ b/web.client.tools.impl/src/org/netbeans/modules/web/client/tools/impl/projects/Bundle.properties
@@ -44,14 +44,14 @@ ACS_CustomizeDebug_ClientDebug_A11YDesc=Debug Client side on debug checkbox
 
 # Web Project
 LBL_Web_CustomizeDebug_ServerDebug_JCheckBox=Debug Web Application (&Server side)
-LBL_Web_CustomizeDebug_ClientDebug_JCheckBox=Debug Web Application (&Client side - Firefox browser only)
+LBL_Web_CustomizeDebug_ClientDebug_JCheckBox=Debug Web Application (&Client side)
 
 # Ruby Rails Project
 LBL_Rails_CustomizeDebug_ServerDebug_JCheckBox=Debug Rails Application (&Server side)
-LBL_Rails_CustomizeDebug_ClientDebug_JCheckBox=Debug Rails Application (&Client side - Firefox browser only)
+LBL_Rails_CustomizeDebug_ClientDebug_JCheckBox=Debug Rails Application (&Client side)
 
 # PHP Project
 LBL_PHP_CustomizeDebug_ServerDebug_JCheckBox=Debug &Server side PHP
-LBL_PHP_CustomizeDebug_ClientDebug_JCheckBox=Debug &Client side JavaScript (Firefox browser only)
+LBL_PHP_CustomizeDebug_ClientDebug_JCheckBox=Debug &Client side JavaScript
 CustomizerDebug.firefoxRadioButton.text=Firefox
 CustomizerDebug.internetExplorerRadioButton.text=Internet Explorer
