Add mnemonics to radio buttons. Add "Available on Windows only" tooltip to Internet Explorer radio button.

--- a/groovy.grailsproject/src/org/netbeans/modules/groovy/grailsproject/ui/Bundle.properties
+++ b/groovy.grailsproject/src/org/netbeans/modules/groovy/grailsproject/ui/Bundle.properties
@@ -20,7 +20,8 @@ LBL_ShellAction_Name=Grails Shell
 TITLE_BrowsePluginLocation=Browse Plugin Location
 LBL_BrowsePluginLocation_OK_Button=OK
 DebugCustomizerPanel.debugClientLabel.text=Debug Grails Application (Client Side)
-DebugCustomizerPanel.firefoxRadioButton.text=Firefox
-DebugCustomizerPanel.internetExplorerRadioButton.text=Internet Explorer
+DebugCustomizerPanel.firefoxRadioButton.text=&Firefox
+DebugCustomizerPanel.internetExplorerRadioButton.text=&Internet Explorer
 
 DEBUG_CATEGORY=Debug
+DebugCustomizerPanel.internetExplorerRadioButton.tooltip=Available on Windows only
