--- a/web.client.tools.impl/src/org/netbeans/modules/web/client/tools/impl/projects/Bundle.properties
+++ b/web.client.tools.impl/src/org/netbeans/modules/web/client/tools/impl/projects/Bundle.properties
@@ -53,5 +53,6 @@ LBL_Rails_CustomizeDebug_ClientDebug_JCheckBox=Debug Rails Application (&Client 
 # PHP Project
 LBL_PHP_CustomizeDebug_ServerDebug_JCheckBox=Debug &Server side PHP
 LBL_PHP_CustomizeDebug_ClientDebug_JCheckBox=Debug &Client side JavaScript
-CustomizerDebug.firefoxRadioButton.text=Firefox
-CustomizerDebug.internetExplorerRadioButton.text=Internet Explorer
+CustomizerDebug.internetExplorerRadioButton.text=&Internet Explorer
+CustomizerDebug.firefoxRadioButton.text=&Firefox
+CustomizerDebug.internetExplorerRadioButton.tooltip=Available on Windows only
