Hints for document roots added
Proper texts must be added.

--- a/php.project/src/org/netbeans/modules/php/project/ui/wizards/Bundle.properties
+++ b/php.project/src/org/netbeans/modules/php/project/ui/wizards/Bundle.properties
@@ -73,7 +73,7 @@ TXT_ExistingSourcesHint=Folder with existing PHP scripts.
 # project folder
 LBL_SeparateProjectFolder=Put NetBeans metadata into a separate directory
 LBL_MetadataFolder=&Metadata Folder:
-TXT_MetadataInfo=In order to correctly run, debug etc. project, NetBeans needs to store project metadata in a folder.
+TXT_MetadataInfo=In order to correctly run, debug project etc., NetBeans needs to store project metadata.
 
 MSG_IllegalSourcesName=Sources directory is not a valid folder name.
 MSG_IllegalFolderName=Folder is not a valid folder name.
