show J2EE server selection in import wizard

--- a/projectimport.eclipse.core/src/org/netbeans/modules/projectimport/eclipse/core/Bundle.properties
+++ b/projectimport.eclipse.core/src/org/netbeans/modules/projectimport/eclipse/core/Bundle.properties
@@ -54,9 +54,11 @@ UpdateEclipseReferencePanel.jLabel1.text=Eclipse Project:
 UpdateEclipseReferencePanel.jLabel2.text=Eclipse Workspace:
 UpdateEclipseReferencePanel.eclipseProjectTextField.text=
 UpdateEclipseReferencePanel.eclipseWorkspaceTextField.text=
-UpdateEclipseReferencePanel.browseProjectButton.text=Browse
-UpdateEclipseReferencePanel.browseWorkspaceButton.text=Browse
+UpdateEclipseReferencePanel.browseProjectButton.text=Browse...
+UpdateEclipseReferencePanel.browseWorkspaceButton.text=Browse...
 UpdateProjectAction.already-in-synch=Projects are already in synch and there is nothing to update.
 # {0} - project directory
 UpdateProjectAction.problems-occurred=Following problems occured during sychronization with Eclipse project {0}:
 UpdateProjectAction.update-issues=Update Issues
+UpdateEclipseReferencePanel.jLabel3.text=<html><b>Original Eclipse project folder cannot be found.</b>
+UpdateEclipseReferencePanel.jLabel4.text=<html>Specify the Eclipse project location. The Eclipse workspace is optional.
