--- a/web.client.tools.firefox/src/org/netbeans/modules/web/client/tools/firefox/Bundle.properties
+++ b/web.client.tools.firefox/src/org/netbeans/modules/web/client/tools/firefox/Bundle.properties
@@ -52,18 +52,18 @@ in your browser.  After the add-on has installed and your browser has restarted,
 press the OK button to continue.
 
 INSTALL_FIREBUG_NOURL_MSG=The Firebug extension (1.1beta or later) for Firefox is required to debug this \
-application.\nGo to http://www.getfirebug.com and install Firebug version 1.1.0b12 or later.  \
+application.\nDownload it from http://www.getfirebug.com and install Firebug version 1.1.0b12 and install it manually.  \
 Alternatively you can download it from http://download.netbeans.org/netbeans/misc/firebug-1.1.0b12.xpi and install it \
 manually.  After the add-on has installed and your browser has restarted, press the OK button to continue.
 
 INSTALL_ALL_EXTENSIONS_URL_MSG=The NetBeans Firefox extension and the Firebug (1.1beta or later) extensions are \
-required to debug this application.\n\nThe add-on installations have been started in your Firefox browser. \
+required to debug this application.\nThe add-on installations have been started in your Firefox browser. \
 After the add-ons have installed and your browser has restarted, press the OK button to continue.
 
 INSTALL_ALL_EXTENSIONS_NOURL_MSG=The NetBeans Firefox extension installation has been started \
-in your Firefox browser.  The Firebug extension (1.1beta or later) is also required.\n\nGo to \
-http://www.getfirebug.com and install Firebug version 1.1.0b12 or later.  Alternatively you can download it from \
-http://download.netbeans.org/netbeans/misc/firebug-1.1.0b12.xpi and install it manually. After both add-ons have \
+in your Firefox browser.  The Firebug extension (1.1beta or later) is also required.\nDownload it from \
+http://www.getfirebug.com and install Firebug version 1.1.0b12 and install it manually.  Alternatively you can download it from \
+http://download.netbeans.org/netbeans/misc/firebug-1.1.0b12.xpi and install it manually.  After both add-ons have \
 installed and your browser has restarted, press the OK button to continue.
 
 INSTALL_EXTENSION_TITLE=Install JavaScript Debugger Extension
