#139699 PHTML file create support

--- a/php.project/src/org/netbeans/modules/php/project/ui/wizards/Bundle.properties
+++ b/php.project/src/org/netbeans/modules/php/project/ui/wizards/Bundle.properties
@@ -39,10 +39,10 @@
 Templates/Project/PHP=PHP
 Templates/Project/PHP/PHPProject.php=PHP Application
 Templates/Scripting=PHP
-Templates/Scripting/EmptyPHP.php=PHP File
-Templates/Scripting/EmptyPHPWebPage.php=PHP Web Page
-Templates/Scripting/PHPClass.php=PHP Class
-Templates/Scripting/PHPInterface.php=PHP Interface
+Templates/Scripting/EmptyPHP=PHP File
+Templates/Scripting/EmptyPHPWebPage=PHP Web Page
+Templates/Scripting/PHPClass=PHP Class
+Templates/Scripting/PHPInterface=PHP Interface
 
 # new PHP project
 TXT_PhpProject=PHP Project
@@ -119,3 +119,6 @@ MSG_FolderFolderExists=Target Folder already exists and is not empty.
 # {1} run configuration [LOCAL/REMOTE/SCRIPT]
 # {2} copying sources to target directory [true/false]
 UI_NEW_PHP_PROJECT=New PHP project created [sources underneath project directory: {0}, run configuration: {1}, copying sources to target directory: {2}].
+
+#new file wizard
+ MSG_NotRecognizedAsPhp={0} isn't recognized as PHP file.
