--- a/o.n.bluej/build.xml
+++ b/o.n.bluej/build.xml
@@ -6,10 +6,7 @@
     <description>Builds, tests, and runs the project org.netbeans.bluej.</description>
     
     <import file="../nbbuild/templates/projectized.xml"/>
-    <target name="nblib" depends="init">
-        
-        
-        
+    <!--target name="nblib" depends="init">
         <mkdir dir="build/antclasses"/>
         <javac srcdir="antsrc" destdir="build/antclasses" source="1.5" debug="true" deprecation="true">
             <classpath>
@@ -29,5 +26,5 @@
         
     </target>
 
-    <target name="netbeans-extra" depends="nblib"/>
+    <target name="netbeans-extra" depends="nblib"/-->
 </project>
