#Bug 156124 - Editor bookmarks view.

--- a/editor.bookmarks/src/org/netbeans/modules/editor/bookmarks/ui/Bundle.properties
+++ b/editor.bookmarks/src/org/netbeans/modules/editor/bookmarks/ui/Bundle.properties
@@ -26,7 +26,7 @@
 # Contributor(s):
 #
 # The Original Software is NetBeans. The Initial Developer of the Original
-# Software is Sun Microsystems, Inc. Portions Copyright 1997-2007 Sun
+# Software is Sun Microsystems, Inc. Portions Copyright 1997-2006 Sun
 # Microsystems, Inc. All Rights Reserved.
 #
 # If you wish your version of this file to be governed by only the CDDL
@@ -40,12 +40,15 @@
 # Version 2 license, then the option applies only if the new code is
 # made subject to such option by the copyright holder.
 
-javac.compilerargs=-Xlint:unchecked
-javac.source=1.6
-spec.version.base=3.22.0
-is.autoload=true
-
-javadoc.arch=${basedir}/arch.xml
-javadoc.apichanges=${basedir}/apichanges.xml
-
-test.config.stableBTD.includes=**/*Test.class
+LBL_BookmarksView=Bookmarks
+LBL_BookmarksViewToolTip=Editor Bookmarks in Opened Projects
+LBL_BookmarksAction=&Bookmarks
+LBL_BookmarkName=Name
+LBL_BookmarkNameDescription=Bookmark Name
+LBL_BookmarkNameEmpty=Bookmark name not set
+# Single letter for "Key" in Bookmarks table (the actual shortcut is just a single letter)
+LBL_BookmarkKeySingleLetter=K
+LBL_BookmarkKeyDescription=Bookmark Shortcut Key
+LBL_BookmarkKeyEmpty=Bookmark shortcut key not set
+LBL_BookmarkLocation=Location
+LBL_BookmarkLocationDescription=Bookmark Location in a File
