--- a/editor.lib/src/org/netbeans/editor/Bundle.properties
+++ b/editor.lib/src/org/netbeans/editor/Bundle.properties
@@ -103,7 +103,7 @@ goto-declaration-trimmed=Go to Declaration
 goto-help=Go to Help
 goto-source=Go to Source
 goto-super-implementation=Go to Super Implementation
-goto=Go to Line...
+goto=Go to Line or Bookmark...
 goto_trimmed=Line...
 start-new-line=Start New Line
 insert-break=Insert Newline
@@ -293,12 +293,12 @@ ACSD_find-button-replace-all=
 ACSD_find-button-cancel=
 
 # GotoDialogPanel
-goto-line=Go To &Line:
+goto-line=Go To &Line or Bookmark:
 ACSD_goto-line=
 ACSD_goto=
 
 # GotoDialogSupport
-goto-title=Go To Line
+goto-title=Go To Line or Bookmark
 goto-button-goto=Go To
 goto-button-goto-mnemonic=G
 goto-button-cancel=Close
