#203519: Integrating the execution related profiler actions

--- a/ant.freeform/src/org/netbeans/modules/ant/freeform/Bundle.properties
+++ b/ant.freeform/src/org/netbeans/modules/ant/freeform/Bundle.properties
@@ -62,6 +62,7 @@ CMD_rebuild=Clean and Build
 CMD_run=Run
 CMD_test=Test
 CMD_debug=Debug
+CMD_profile=Profile
 CMD_javadoc=Generate Javadoc
 CMD_redeploy=Redeploy
 CMD_deploy=Deploy
