--- a/java.freeform/src/org/netbeans/modules/java/freeform/Bundle.properties
+++ b/java.freeform/src/org/netbeans/modules/java/freeform/Bundle.properties
@@ -61,6 +61,7 @@ LBL_generate=Generate
 ACTION_compile.single=Compile File
 ACTION_run.single=Run File
 ACTION_debug.single=Debug File
+ACTION_profile.single=Profile File
 COMMENT_edit_target=TODO: edit the following target according to your needs
 COMMENT_more_info_x.single=(more info: http://www.netbeans.org/kb/articles/freeform-config.html#compilesingle)
 COMMENT_more_info_run.single=(more info: http://www.netbeans.org/kb/articles/freeform-config.html#runsingle)
@@ -73,6 +74,9 @@ ACTION_debug=Debug Project
 COMMENT_more_info_debug=(more info: http://www.netbeans.org/kb/articles/freeform-config.html#debugj2se)
 COMMENT_set_runtime_cp=TODO configure the runtime classpath for your project here:
 COMMENT_set_main_class=TODO configure the main class for your project here:
+
+ACTION_profile=Profile Project
+COMMENT_more_info_profile=(more info: http://wiki.netbeans.org/FaqProfilerFreeForm72)
 
 CTL_SetOutput=Set Output
 AD_SetOutput=N/A
