--- a/profiler.nbimpl/src/org/netbeans/modules/profiler/nbimpl/actions/Bundle.properties
+++ b/profiler.nbimpl/src/org/netbeans/modules/profiler/nbimpl/actions/Bundle.properties
@@ -44,7 +44,7 @@ Menu/Profile/ProfileOther=Profile &Other
 
 # {0} - # of selected projects (0 if disabled), or -1 if main project
 # {1} - project name, if exactly one project
-LBL_ProfileMainProjectAction=&Profile {0,choice,-1#Main Project|0#Project|1#Project ({1})|1<{0} Projects}...
+LBL_ProfileMainProjectAction=&Profile {0,choice,-1#Main Project|0#Project|1#Project ({1})|1<{0} Projects}
 HINT_ProfileMainProjectAction=Profile (Main) Project
 LBL_AttachMainProjectAction=&Attach Profiler...
 HINT_AttachMainProjectAction=Attach Profiler...
@@ -67,6 +67,4 @@ LBL_ProfileProjectAction40_General=Profile Project
 LBL_ProfileProjectActionPopup=Profile
 LBL_UnintegrateProfilerAction=&Unintegrate Profiler from {0,choice,0#Project|1#\"{1}\"|1<Projects}
 
-LBL_ProfileProject=Profile Project
-LBL_ProfileFile=Profile File
-LBL_ProfileTest=Profile Test
+LBL_ProfileProject=Profile
