--- a/profiler/src/org/netbeans/modules/profiler/actions/Bundle.properties
+++ b/profiler/src/org/netbeans/modules/profiler/actions/Bundle.properties
@@ -48,7 +48,7 @@ AdvancedOption_Tooltip=Customize the profiling settings
 
 # {0} - # of selected projects (0 if disabled), or -1 if main project
 # {1} - project name, if exactly one project
-LBL_ProfileMainProjectAction=&Profile {0,choice,-1#Main Project|0#Project|1#Project ({1})|1<{0} Projects}...
+LBL_ProfileMainProjectAction=&Profile {0,choice,-1#Main Project|0#Project|1#Project ({1})|1<{0} Projects}
 HINT_ProfileMainProjectAction=Profile (Main) Project
 LBL_AttachProjectAction=Attach Profiler Using Project {0,choice,0#|1#"{1}"|1<}
 
