--- a/java.api.common/src/org/netbeans/modules/java/api/common/project/Bundle.properties
+++ b/java.api.common/src/org/netbeans/modules/java/api/common/project/Bundle.properties
@@ -48,6 +48,9 @@ ACTION_debug.single.method=Debug File
 ACTION_debug.stepinto=Debug Project
 ACTION_debug.fix=Apply Code Changes
 ACTION_debug.test.single=Debug Test
+ACTION_profile=Profile Project
+ACTION_profile.single=Profile File
+ACTION_profile.test.single=Profile Test
 ACTION_rebuild=Rebuild Project
 ACTION_build=Build Project
 ACTION_clean=Clean Project
