--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -915,8 +915,17 @@ PKGINST=${pkg.svr4.pkginst}</echo>
     <property name="debug.server" value="n"/>
     <antcall target="tryme"/>
   </target>
-    
-  <target name="tryme-profile" depends="-jdk-presetdef-nbprofiledirect" description="Start IDE in debugger. May only be called from within IDE.">
+
+  <target name="-profile-check" if="netbeans.home">
+      <condition property="profiler.configured">
+          <or>
+              <contains string="${run.args.ide}" substring="-agentpath:" casesensitive="true"/>
+              <contains string="${run.args.ide}" substring="-javaagent:" casesensitive="true"/>
+          </or>
+      </condition>
+  </target>
+  
+  <target name="-tryme-profile-pre72" depends="-jdk-presetdef-nbprofiledirect" if="profiler.info.jvmargs.agent" description="Start IDE in profiler (pre72 compatibility mode). May only be called from within IDE.">
     <property name="profiler.roots.path" value="profiler.roots.all" />
     <fileset id="profiler.roots.all" dir="${netbeans.dest.dir}">
         <include name="**/*.jar"/>
@@ -935,10 +944,11 @@ PKGINST=${pkg.svr4.pkginst}</echo>
           <fileset refid="${profiler.roots.path}" />
       </rootspath>
     </nbprofiledirect>
-    
-    <antcall target="tryme">
-        <param name="tryme.debug.args" value="${profiler.jvmargs}"/>
-    </antcall>
+  </target>
+  
+  <target name="tryme-profile" depends="-profile-check,-tryme-profile-pre72" if="profiler.configured" unless="profiler.info.jvmargs.agent" description="Start IDE in profiler. May only be called from within IDE.">
+    <startprofiler/>
+    <antcall target="tryme"/>
   </target>
   
   <target name="tryme" depends="-load-build-properties,tryme-setup-debug-args,-jdk-init"
