--- a/javafx2.project/src/org/netbeans/modules/javafx2/project/ui/Bundle.properties
+++ b/javafx2.project/src/org/netbeans/modules/javafx2/project/ui/Bundle.properties
@@ -61,7 +61,7 @@ AD_JFXApplicationParametersPanel.buttonAdd.text=N/A
 AN_JFXApplicationParametersPanel.buttonAdd.text=&Add
 
 JFXDeploymentPanel.labelProperties.text=Web Start and Browser Application Properties
-JFXDeploymentPanel.labelInitialRemark.text=<html>Single JNLP deployment file will be generated for Standalone, Web Start and Browser deployment using properties<br>set in Application, Run and Deployment panels. Active Run Configuration is used from Run panel.</html>
+JFXDeploymentPanel.labelInitialRemark.text=<html>Single JNLP deployment file will be generated for Standalone, Web Start and Browser deployment using properties set in Application, Run and Deployment panels. Active Run Configuration is used from Run panel.</html>
 LBL_JFXDeploymentPanel.checkBoxUpgradeBackground.text=&Check for application updates in background
 AD_JFXDeploymentPanel.checkBoxUpgradeBackground.text=N/A
 AN_JFXDeploymentPanel.checkBoxUpgradeBackground.text=&Check for application updates in background
@@ -246,5 +246,5 @@ JFXRunPanel.comboBoxWebBrowser.AccessibleContext.accessibleDescription=Web Brows
 JFXRunPanel.buttonWebBrowser.AccessibleContext.accessibleName=&Manage...
 JFXDeploymentPanel.labelInitialRemark.AccessibleContext.accessibleDescription=N/A
 JFXDeploymentPanel.labelProperties.AccessibleContext.accessibleDescription=N/A
-JFXDeploymentPanel.labelInitialRemarkSwing.text=<html>Single JNLP deployment file will be generated for Web Start and Browser deployment using properties<br>set in Application, Run and Deployment panels. Active Run Configuration is used from Run panel.</html>
+JFXDeploymentPanel.labelInitialRemarkSwing.text=<html>Single JNLP deployment file will be generated for Web Start and Browser deployment using properties set in Application, Run and Deployment panels. Active Run Configuration is used from Run panel.</html>
 JFXDeploymentPanel.labelInitialRemarkSwing.AccessibleContext.accessibleDescription=N/A
