Repair wrong Default button text and mnemonic in FX Project Propertie Run dialog

--- a/javafx2.project/src/org/netbeans/modules/javafx2/project/ui/Bundle.properties
+++ b/javafx2.project/src/org/netbeans/modules/javafx2/project/ui/Bundle.properties
@@ -24,7 +24,7 @@ JFXRunPanel.labelVMOptionsRemark.text=(e.g. -Xms10m)
 JFXRunPanel.checkBoxPreloader.text=Use Pre&loader:
 JFXRunPanel.buttonPreloader.text=Browse&...
 JFXRunPanel.labelPreloaderClass.text=Preloader &Class:
-JFXRunPanel.buttonPreloaderDefault.text=De&fault
+JFXRunPanel.buttonPreloaderDefault.text=Default
 JFXRunPanel.buttonPreloaderDefault.text.alt=Clean
 # the following radiobutton in displayed in context:  "Run: (x) Standalone  (x) as Web Start  (x) in Browser"
 JFXRunPanel.radioButtonSA.text=&Standalone
