Bug 208879 "java.util.regex.PatternSyntaxException: Dangling meta character '*' near index 14 ^(nbproject)$|*.bat|*.sln|AUTHORS|CONTRIBUTORS|*.xml|*.html ^" fix.

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/configurations/ui/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/configurations/ui/Bundle.properties
@@ -495,6 +495,7 @@ ProjectPropPanel.ignoreFoldersLabel.text=&Ignored Folders Pattern:
 ProjectPropPanel.ignoreFoldersLabel.mn=i
 ProjectPropPanel.ignoreFoldersDefaultButton.text=Defa&ult
 ProjectPropPanel.ignoreFoldersDefaultButton.mn=u
+ProjectPropPanel.incorrectRegEx=Folders Pattern is incorrect:\n {0}\nRestoring to default value.
 
 #CompilerSetEditorCustomizer
 CompilerSetEditorCustomizerTitile=Tool Collection Manager - {0}
