--- a/performance/nbproject/project.properties
+++ b/performance/nbproject/project.properties
@@ -43,6 +43,6 @@
 javac.compilerargs=-Xlint -Xlint:-serial
 javac.source=1.6
 
-test.run.args=-da -Xmx512M
+test.run.args=-da -Xmx512M -Dnetbeans.keyring.no.master=true -DSuspendSupport.disabled=true -DBrokenReferencesSupport.suppressBrokenRefAlert=true -Dnetbeans.full.hack=true
 
 test.timeout=3600000
