--- a/performance/hudson/netbeans.conf
+++ b/performance/hudson/netbeans.conf
@@ -1,13 +1,36 @@
-# ${HOME} will be replaced by JVM user.home system property
-netbeans_default_userdir="${HOME}/.netbeans/perfdev"
+# On Windows ${DEFAULT_USERDIR_ROOT} will be replaced by the launcher
+# with a path to "<AppData>/NetBeans" folder where <AppData> is user's
+# value of AppData key in Windows Registry under
+#   Software\Microsoft\Windows\CurrentVersion\Explorer\Shell Folders
+# ${DEFAULT_CACHEDIR_ROOT} will be replaced by the launcher
+# with a path to "<Local AppData>/NetBeans/Cache" folder where <Local AppData>
+# is user's value of Local AppData key in Windows Registry under
+#   Software\Microsoft\Windows\CurrentVersion\Explorer\Shell Folders
+#
+# On Mac ${DEFAULT_USERDIR_ROOT} will be replaced by the launcher
+# with a path to ~/Library/Application Support/NetBeans
+# ${DEFAULT_CACHEDIR_ROOT} with a path to ~/Library/Caches/NetBeans
+#
+# On other systems ${DEFAULT_USERDIR_ROOT} will be replaced with
+# a path to ~/.netbeans folder in user's home and
+# ${DEFAULT_CACHEDIR_ROOT} with a path to ~/.cache/netbeans folder.
+#
+# You can also use ${HOME} which will be replaced by user.home
+# system property.
+#
+# NOTE: If you specify a non-default userdir path, the cachedir path
+# will be mapped to <userdir>/var/cache folder.
+#
+netbeans_default_userdir="${DEFAULT_USERDIR_ROOT}/perfdev"
+netbeans_default_cachedir="${DEFAULT_CACHEDIR_ROOT}/perfdev"
 
 # Options used by NetBeans launcher by default, can be overridden by explicit
 # command line switches:
-netbeans_default_options="-J-Dnetbeans.keyring.no.master=true -J-DSuspendSupport.disabled=true -J-DBrokenReferencesSupport.suppressBrokenRefAlert=true -J-Dnetbeans.full.hack=true -J-client -J-Xss2m -J-Xms32m -J-XX:MaxPermSize=200m -J-Dapple.laf.useScreenMenuBar=true -J-Dorg.netbeans.log.startup=print -J-Dapple.awt.graphics.UseQuartz=true -J-Dsun.java2d.noddraw=true -J-Dorg.netbeans.editor.linewrap=true -J-Dnetbeans.logger.console=false -J-Dorg.netbeans.modules.parsing.impl.indexing.RepositoryUpdater.level=INFO"
-# Note that a default -Xmx is selected for you automatically.
-# You can find this value in var/log/messages.log file in your userdir.
-# The automatically selected value can be overridden by specifying -J-Xmx here
-# or on the command line.
+netbeans_default_options="-J-client -J-Xss2m -J-Xms32m -J-XX:PermSize=32m -J-Dnetbeans.logger.console=false -J-Dapple.laf.useScreenMenuBar=true -J-Dapple.awt.graphics.UseQuartz=true -J-Dsun.java2d.noddraw=true -J-Dsun.zip.disableMemoryMapping=true -J-Dplugin.manager.check.updates=false -J-Dnetbeans.keyring.no.master=true -J-DSuspendSupport.disabled=true -J-DBrokenReferencesSupport.suppressBrokenRefAlert=true -J-Dnetbeans.full.hack=true -J-Dorg.netbeans.log.startup=print -J-Dorg.netbeans.editor.linewrap=true -J-Dorg.netbeans.modules.parsing.impl.indexing.RepositoryUpdater.level=INFO"
+# Note that default -Xmx and -XX:MaxPermSize are selected for you automatically.
+# You can find these values in var/log/messages.log file in your userdir.
+# The automatically selected value can be overridden by specifying -J-Xmx or
+# -J-XX:MaxPermSize= here or on the command line.
 
 # If you specify the heap size (-Xmx) explicitly, you may also want to enable
 # Concurrent Mark & Sweep garbage collector. In such case add the following
@@ -15,8 +38,10 @@ netbeans_default_options="-J-Dnetbeans.keyring.no.master=true -J-DSuspendSupport
 # -J-XX:+UseConcMarkSweepGC -J-XX:+CMSClassUnloadingEnabled -J-XX:+CMSPermGenSweepingEnabled
 # (see http://wiki.netbeans.org/FaqGCPauses)
 
-# Default location of JDK, can be overridden by using --jdkhome <dir>:
-#netbeans_jdkhome="/path/to/jdk"
+# Default location of JDK, can be overridden by using --jdkhome <dir>
+# Be careful when changing jdkhome. There are two launchers - 32-bit and 64-bit.
+# Which one is used depends on JVM architecture.
+# netbeans_jdkhome="/space/jdks/jdk7"
 
 # Additional module clusters, using ${path.separator} (';' on Windows or ':' on Unix):
 #netbeans_extraclusters="/absolute/path/to/cluster1:/absolute/path/to/cluster2"
