t13y issues for vmd

--- a/vmd.componentssupport/src/org/netbeans/modules/vmd/componentssupport/ui/wizard/Bundle.properties
+++ b/vmd.componentssupport/src/org/netbeans/modules/vmd/componentssupport/ui/wizard/Bundle.properties
@@ -49,9 +49,13 @@ LBL_FinalStep=Basic Module Configuration
 TXT_MobileDesigner=Mobile Designer Component
 
 #org.netbeans.modules.vmd.componentssupport.ui.wizard.Version
+# for translators: translatable, but keep capital letters
 MIDP_VERSION_DISPLAY_forever=FOREVER
+# for translators: translatable, but keep capital letters
 MIDP_VERSION_DISPLAY_all=All MIDP versions
+# for translators: do not translate
 MIDP_VERSION_DISPLAY_1=MIDP 1
+# for translators: do not translate
 MIDP_VERSION_DISPLAY_2=MIDP 2
 
 # Main Wizard Step "Name and Location"
