--- a/vmd.midp/src/org/netbeans/modules/vmd/midp/propertyeditors/Bundle.properties
+++ b/vmd.midp/src/org/netbeans/modules/vmd/midp/propertyeditors/Bundle.properties
@@ -41,6 +41,7 @@
 # made subject to such option by the copyright holder.
 
 # PropertyEditorPreferredSize
+# for translators: do not translate
 LBL_PREF_SIZE_UNLOCKED_TXT=UNLOCKED
 LBL_PREF_SIZE_UNLOCKED=Un&locked
 
@@ -85,6 +86,7 @@ LBL_CHAR_UCLABEL=Char
 #PropertyValueGaugeMaxValue
 LBL_GAUGE_MAX_VALUE_STR=&Maximum Value:
 LBL_GAUGE_MAX_VALUE_UCLABEL=Gauge Maximum Value
+# for translators: do not translate
 LBL_MAX_VALUE_INDEFINITE_TXT=INDEFINITE
 LBL_MAX_VALUE_INDEFINITE=&Indefinite
 
@@ -150,6 +152,7 @@ LBL_TIMEOUTPE_FOREVER=&Forever
 #MNM_TIMEOUTPE_FOREVER=F
 LBL_TIMEOUT_STR=&Timeout:
 LBL_TIMEOUT_UCLABEL=Timeout
+# for translators: do not translate
 LBL_TIMEOUTPE_FOREVER_TXT=FOREVER
 ACSN_TIMEOUT_STR=Timeout
 ACSD_TIMEOUT_STR=Chooses custom timeout value
@@ -227,6 +230,7 @@ LBL_ITEMLAYOUTPE_GEN_DEFAULT=Default
 MNM_ITEMLAYOUTPE_GEN_DEFAULT=D
 ACSN_ITEMLAYOUTPE_GEN_DEFAULT=General Default layout
 ACSD_ITEMLAYOUTPE_GEN_DEFAULT=Selects general default layout
+# for translators: do not translate
 LBL_ITEMLAYOUTPE_GEN_MIDP2=MIDP 2
 MNM_ITEMLAYOUTPE_GEN_MIDP2=2
 ACSN_ITEMLAYOUTPE_GEN_MIDP2=General MIDP 2 layout
@@ -363,8 +367,10 @@ ACSD_ITEMLAYOUTPE_EX_VERTICAL=Selects Vertical Expand
 #LBL_FONTPE_RB_SMALL=Small
 #MNM_FONTPE_RB_SMALL=A
 
+# for translators: do not translate
 LBL_TEXTFIELDPE_CAPS_WORD=INITIAL_CAPS_WORD
 MNM_TEXTFIELDPE_CAPS_WORD=W
+# for translators: do not translate
 LBL_TEXTFIELDPE_CAPS_SENTENCE=INITIAL_CAPS_SENTENCE
 MNM_TEXTFIELDPE_CAPS_SENTENCE=E
 LBL_TEXTFIELDPE_URL=URL
