--- a/vmd.midp/src/org/netbeans/modules/vmd/midp/propertyeditors/date/Bundle.properties
+++ b/vmd.midp/src/org/netbeans/modules/vmd/midp/propertyeditors/date/Bundle.properties
@@ -42,8 +42,11 @@
 
 LBL_DATE_STR=&Date:
 LBL_DATE_UCLABEL=Date
+# for translators: do not translate message format (string after semicolon)
 MSG_NON_DATE_TIME=Date must be in the following format: dd.MM.yyyy HH:mm:ss
+# for translators: do not translate message format (string after semicolon)
 MSG_NON_DATE=Date must be in the following format: dd.MM.yyyy
+# for translators: do not translate message format (string after semicolon)
 MSG_NON_TIME=Date must be in the following format: HH:mm:ss
 
 ACSN_Date=Date
