--- a/vmd.midpnb/src/org/netbeans/modules/vmd/midpnb/propertyeditors/Bundle.properties
+++ b/vmd.midpnb/src/org/netbeans/modules/vmd/midpnb/propertyeditors/Bundle.properties
@@ -152,6 +152,7 @@ DISP_LoginProperties=Login Properties
 #DESC_SimpleTableModelPE_RemoveRow=Remove Row
 
 #PropertyEditorPhoneNumber
+# for translators: translatable
 LBL_PhoneNumber_Warning=Acceptable charcters: '+', '-' and numbers 0-9
 
 #Library definition
