fixing #209858 - Provide C++ standard parameter from project properties to editor's lexer

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -931,6 +931,7 @@ nb.cluster.cnd=\
         cnd.lexer,\
         cnd.litemodel,\
         cnd.makeproject,\
+	cnd.makeproject.source.bridge,\
         cnd.model.services,\
         cnd.modeldiscovery,\
         cnd.modelimpl,\
