enabling editing layout gaps in a dialog

--- a/form/src/org/netbeans/modules/form/assistant/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/assistant/Bundle.properties
@@ -81,12 +81,18 @@ nextToSeparateVerticalTrailing=Snap at the large preferred distance from a compo
 indent=Indent the component.
 generalPosition=Move the component into its position.
 generalResizing=Resize the component.
-snappedToDefaultHorizontal=Set the default width of the component.
-snappedToDefaultVertical=Set the default height of the component.
+gapResizing=Resize the gap.
 unplacedComponent1=Copied or inserted component - not placed in the layout yet.
 unplacedComponent2=Move the component via mouse to place it.
 unplacedComponents1=Copied or inserted components - not placed in the layout yet.
 unplacedComponents2=Move the components via mouse to place them.
+
+# Clickable layout gaps
+layoutGaps=The gaps between components can be selected and adjusted via mouse, or customized in a dialog.
+selectedLayoutGaps_1=To resize the selected gap via mouse, drag the resize handle or use mouse wheel.
+selectedLayoutGaps_2=Double-click the layout gap or invoke <i>Edit Layout Space</i> from context menu to show the customization dialog.
+selectedLayoutGaps_3=If a layout gap is hard to select, invoke <i>Edit Layout Space</i> context menu action on a neighbor component.
+selectedLayoutGaps_4=Adjust the layout gaps instead of moving components, e.g. when making room for inserting new components.
 
 # Layout managers
 absoluteLayout=Place the component at [{0}, {1}].
