#208162 - Add Default button to Hudson PHP options for config.xml

--- a/hudson.php/src/org/netbeans/modules/hudson/php/ui/options/Bundle.properties
+++ b/hudson.php/src/org/netbeans/modules/hudson/php/ui/options/Bundle.properties
@@ -48,6 +48,7 @@ HudsonOptionsPanel.ppwLearnMoreLabel.text=<html><a href="#">Learn more</a>
 HudsonOptionsPanel.jobConfigLabel.text=&Job Config:
 HudsonOptionsPanel.note2Label.text=<html><i>Note:</i></html>
 HudsonOptionsPanel.jobConfigBrowseButton.text=B&rowse...
+HudsonOptionsPanel.jobConfigDefaultButton.text=&Default
 HudsonOptionsPanel.jobConfigInstallationInfoLabel.text=Installation instructions can be found on the web site.
 HudsonOptionsPanel.jobConfigLearnMoreLabel.text=<html><a href="#">Learn more</a>
 HudsonOptionsPanel.jobConfigDownloadLabel.text=<html><a href="#">Download Latest Version of Job Config</a>
