#209004 - Fix title for remote connection

--- a/php.project/src/org/netbeans/modules/php/project/resources/Bundle.properties
+++ b/php.project/src/org/netbeans/modules/php/project/resources/Bundle.properties
@@ -51,5 +51,5 @@ OpenIDE-Module-Long-Description=\
 PHPContentResolver=PHP Files (content check)
 Php.Options.Export.Category.displayName=PHP
 Php.Options.Export.General.displayName=General
-Php.Options.Export.Remote.displayName=Remote Configurations (FTP/SFTP)
+Php.Options.Export.Remote.displayName=Remote Connections (FTP/SFTP)
 Php.Options.Export.Annotations.displayName=User Annotations
