--- a/php.project/src/org/netbeans/modules/php/project/ui/customizer/Bundle.properties
+++ b/php.project/src/org/netbeans/modules/php/project/ui/customizer/Bundle.properties
@@ -143,10 +143,10 @@ LBL_UploadFilesOnRun=On Run
 TXT_UploadFilesOnRun=Files will be uploaded when the project is run
 LBL_UploadFilesOnSave=On Save
 TXT_UploadFilesOnSave=Files will follow all local changes (create, edit, rename, delete)
-LBL_MissingRemoteConfiguration=<missing configuration>
-LBL_NoRemoteConfiguration=<no configuration>
-MSG_NoConfigurationSelected=No remote configuration selected.
-MSG_NonExistingConfigurationSelected=Non-existing remote configuration selected.
+LBL_MissingRemoteConfiguration=<missing connection>
+LBL_NoRemoteConfiguration=<no connection defined>
+MSG_NoConfigurationSelected=No remote connection selected.
+MSG_NonExistingConfigurationSelected=Non-existing remote connection selected.
 MSG_InvalidWebRoot=Web Root not found (validate in Sources).
 LBL_SelectWorkingDirectory=Select Working Directory
 RunAsScript.workDirLabel.text=Wor&king Directory:
