--- a/bugzilla/src/org/netbeans/modules/bugzilla/issue/Bundle.properties
+++ b/bugzilla/src/org/netbeans/modules/bugzilla/issue/Bundle.properties
@@ -144,8 +144,8 @@ IssuePanel.reloadButton.text=Reload Attributes
 IssuePanel.reloadMessage=Reloading server attributes
 IssuePanel.refreshButton.toolTipText=Load the latest issue data from the server.
 IssuePanel.reloadButton.toolTipText=Reload sever attributes like the list of components, versions, etc.
-IssuePanel.tasklistButton.add=Add to Tasklist
-IssuePanel.tasklistButton.remove=Remove from Tasklist
+IssuePanel.tasklistButton.add=Add to ActionItems
+IssuePanel.tasklistButton.remove=Remove from ActionItems
 IssuePanel.statusWhiteboardLabel.text=Status Whiteboard:
 IssuePanel.issueTypeLabel.text=Issue Type:
 
