--- a/jira/src/org/netbeans/modules/jira/issue/Bundle.properties
+++ b/jira/src/org/netbeans/modules/jira/issue/Bundle.properties
@@ -161,8 +161,8 @@ IssuePanel.reopenIssueButton.text=Reopen Issue
 IssuePanel.reopenIssueMessage=Reopening issue {0}
 IssuePanel.logWorkButton2.text=Log Work on this Issue
 IssuePanel.logWorkMessage=Logging work on issue {0}
-IssuePanel.tasklistButton.add=Add to Tasklist
-IssuePanel.tasklistButton.remove=Remove from Tasklist
+IssuePanel.tasklistButton.add=Add to ActionItems
+IssuePanel.tasklistButton.remove=Remove from ActionItems
 IssuePanel.issueLinksLabel.text=Issue Links:
 
 # ResolveIssuePanel
