Due date filtering group added

--- a/tasks.ui/src/org/netbeans/modules/tasks/ui/Bundle.properties
+++ b/tasks.ui/src/org/netbeans/modules/tasks/ui/Bundle.properties
@@ -26,6 +26,11 @@ LBL_AddTaskToCatErr=The {0} category already contains this task
 LBL_CatNameErrUnique=Category with this name already exists
 LBL_CatNameErrEmpty=Name field can't be empty
 
+LBL_DueAll=Show all dates
+LBL_DueToday=Show due today only
+LBL_DueWeek=Show due this week only
+LBL_DueMonth=Show due this month only
+
 OpenIDE-Module-Name=Task Dashboard
 OpenIDE-Module-Short-Description=Task Dashboard
 ToolbarPanel.btnAddCategory.text=
@@ -40,4 +45,3 @@ TaskTopComponent.screen.text=
 QueryTopComponent.jLabel1.text=
 
 CategoryPicker.jLabel1.text=Choose Category:
-=
