Issue #210212 - Refactoring Rename Missing Description

--- a/refactoring.java/src/org/netbeans/modules/refactoring/java/spi/Bundle.properties
+++ b/refactoring.java/src/org/netbeans/modules/refactoring/java/spi/Bundle.properties
@@ -42,3 +42,4 @@
 
 ERR_OutOfMemory=There is not enough memory to complete this task. Source tree is too large. Please increase -J-Xmx value in your etc/netbeans.conf and restart the IDE.
 ERR_ExceptionThrown=Exception thrown: {0}. Please report a bug againts refactoring/java module and attach your var/log/messages.log.
+LBL_NotAvailable=Update
