Workaround for FX Samples with Audio to run correctly as WebStart and in Browser

--- a/javafx2.samples/AudioVisualizer3D/nbproject/project.properties
+++ b/javafx2.samples/AudioVisualizer3D/nbproject/project.properties
@@ -65,7 +65,7 @@ javafx.deploy.adddesktopshortcut=false
 javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
-javafx.deploy.backgroundupdate=true
+javafx.deploy.backgroundupdate=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.includeDT=true
 javafx.deploy.installpermanently=false
@@ -88,8 +88,8 @@ javafx.run.height=600
 javafx.run.width=800
 javafx.runtime=${platforms.Default_JavaFX_Platform.javafx.runtime.home}
 javafx.sdk=${platforms.Default_JavaFX_Platform.javafx.sdk.home}
-javafx.signing.enabled=false
-javafx.signing.type=notsigned
+javafx.signing.enabled=true
+javafx.signing.type=self
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0 projects
 jnlp.enabled=false
 # Main class for Java launcher
