Issue #210262 - API Addition TransformationSupport class

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -493,6 +493,7 @@ nb.cluster.java=\
         java.hints.declarative.test,\
         java.hints.legacy.spi,\
         java.hints.test,\
+        java.hints.ui,\
         java.j2seplatform,\
         java.j2seproject,\
         java.kit,\
