--- a/websvc.rest.samples/CustomerDB/web/WEB-INF/web.xml
+++ b/websvc.rest.samples/CustomerDB/web/WEB-INF/web.xml
@@ -60,10 +60,10 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
-    <persistence-context-ref>
-        <persistence-context-ref-name>persistence/CustomerDBPU</persistence-context-ref-name>
+    <persistence-unit-ref>
+        <persistence-unit-ref-name>persistence-factory</persistence-unit-ref-name>
         <persistence-unit-name>CustomerDBPU</persistence-unit-name>
-    </persistence-context-ref>
+    </persistence-unit-ref>
     <resource-ref>
         <res-ref-name>UserTransaction</res-ref-name>
         <res-type>javax.transaction.UserTransaction</res-type>
