--- a/refactoring.java/src/org/netbeans/modules/refactoring/java/ui/Bundle.properties
+++ b/refactoring.java/src/org/netbeans/modules/refactoring/java/ui/Bundle.properties
@@ -480,3 +480,18 @@ IntroduceLocalExtensionPanel.chkReplace.text=&Replace original usages with the e
 IntroduceLocalExtensionPanel.btnDelegate.text=Delegate
 IntroduceLocalExtensionPanel.btnGenerate.text=Generate
 IntroduceLocalExtensionPanel.btnSeperate.text=Separate
+ReplaceConstructorWithFactoryPanel.jLabel1.text=&Factory Method Name:
+ReplaceConstructorWithFactoryPanel.nameField.text=
+InvertBooleanRefactoringPanel.jLabel1.text=&New Name:
+InvertBooleanRefactoringPanel.nameField.text=
+InvertBooleanName=Invert Boolean
+InvertBooleanDescription=Invert Boolean Method {0}
+LBL_InvertBooleanAction=Invert Boolean...
+LBL_ReplaceConstructorAction=Replace C&onstructor with Factory...
+CTL_ReplaceConstructorAction=Replace Constructor With Factory
+ReplaceConstructorName=Replace Constructor With Factory
+ReplaceConstructorDescription=Replace Constructor {0} with Factory Method {1}
+LBL_ReplaceConstructorWithBuilderAction=Replace Constructor with &Builder...
+ReplaceConstructorWithBuilder.jLabel1.text=&Builder Class Name:
+ReplaceConstructorWithBuilderName=Replace Constructor With Builder
+ReplaceConstructorWithBuilderDescription=Replace Constructor {0} with Builder {1}
