Minor improvement related to #209043 - No transfer timeout on ftp connection

--- a/php.project/src/org/netbeans/modules/php/project/connections/ftp/Bundle.properties
+++ b/php.project/src/org/netbeans/modules/php/project/connections/ftp/Bundle.properties
@@ -61,7 +61,11 @@ MSG_FtpCannotCreateDirectory=Cannot create directory {0}.
 MSG_FtpCannotGetPermissions=Cannot get permissions for {0}.
 MSG_FtpCannotSetPermissions=Cannot set permissions for {0}.
 MSG_FtpCannotCheckFileExistence=Cannot check existence of {0}.
-MSG_FtpCannotKeepAlive=Keep-alive failed for server {0}.
+# {0} - host name
+# {1} - reason
+MSG_FtpCannotKeepAlive=Keep-alive failed for server {0}: {1}.
+# {0} - host name
+MSG_FtpCannotKeepAliveNoReason=Keep-alive failed for server {0} (unknown reason).
 
 # panel
 FtpConfigurationPanel.passwordLabelInfo.text_1=Leave password empty to be prompted.
