--- a/lib.profiler.ui/src/org/netbeans/lib/profiler/ui/components/Bundle.properties
+++ b/lib.profiler.ui/src/org/netbeans/lib/profiler/ui/components/Bundle.properties
@@ -52,6 +52,8 @@ FilterComponent_AccessDescr=Enter value to filter displayed results
 FilterComponent_FilterContains=Contains
 FilterComponent_FilterNotContains=Does Not Contain
 FilterComponent_FilterRegexp=Regular Expression
+# Filter Hint (Filter Type), example: Class Name Filter (Does Not Contain)
+FilterComponent_FilterHint={0} ({1})
 
 HTMLTextArea_CutString=Cut
 HTMLTextArea_CopyString=Copy
