Issue #207921 - Disabled context menu on local revision

--- a/localhistory/src/org/netbeans/modules/localhistory/Bundle.properties
+++ b/localhistory/src/org/netbeans/modules/localhistory/Bundle.properties
@@ -8,3 +8,7 @@ CTL_DisplayName=Local History
 CTL_MainMenuItem=&Local History
 
 LBL_Local=Local
+
+LBL_DeleteAction=Delete from History
+
+LBL_RevertFileAction=Revert from History
