--- a/j2ee.ddloaders/src/org/netbeans/modules/j2ee/ddloaders/web/multiview/Bundle.properties
+++ b/j2ee.ddloaders/src/org/netbeans/modules/j2ee/ddloaders/web/multiview/Bundle.properties
@@ -333,12 +333,19 @@ LBL_WebResourceCollectionHttpMethods=HTTP Method(s)\:
 LBL_AllHttpMethods=&All HTTP Methods
 LBL_SubsetOfHttpMethods=&Selected HTTP Methods
 
+# Do not translate - HTTP protocol reserved word (HTTP method name)
 LBL_GET=&GET
+# Do not translate - HTTP protocol reserved word (HTTP method name)
 LBL_POST=&POST
+# Do not translate - HTTP protocol reserved word (HTTP method name)
 LBL_HEAD=&HEAD
+# Do not translate - HTTP protocol reserved word (HTTP method name)
 LBL_PUT=PU&T
+# Do not translate - HTTP protocol reserved word (HTTP method name)
 LBL_OPTIONS=&OPTIONS
+# Do not translate - HTTP protocol reserved word (HTTP method name)
 LBL_TRACE=TR&ACE
+# Do not translate - HTTP protocol reserved word (HTTP method name)
 LBL_DELETE=D&ELETE
 
 LBL_AuthenticationMethod=Authentication Method\:
