Addressing translatability issues.

--- a/html/src/org/netbeans/modules/html/palette/items/Bundle.properties
+++ b/html/src/org/netbeans/modules/html/palette/items/Bundle.properties
@@ -631,7 +631,7 @@ ACSD_UL_Dialog=Unordered List Dialog
 
 ACSN_UL_Items=Number of items
 
-ACSN_UL_Style=Numbering_style
+ACSN_UL_Style=Numbering style
 
 ACSN_UL_default=default
 
@@ -678,13 +678,13 @@ LBL_FORM_Method_Post=&POST
 ACSN_FORM_GET=GET
 ACSN_UL_Items_Spinner=NumberSpinner
 ACSD_UL_Items_Spinner=Number of Items Spinner
-ACSN_TEXTAREA_Rows_Spinner=Rows_Spinner
+ACSN_TEXTAREA_Rows_Spinner=Rows Spinner
 ASCD_TEXTAREA_Rows_Spinner=Rows Spinner
-ACSN_TEXTAREA_Columns_Spinner=Columns_Spinner
+ACSN_TEXTAREA_Columns_Spinner=Columns Spinner
 ACSD_TEXTAREA_Columns_Spinner=Columns Spinner
-ACSN_SELECT_Options_Spinner=Options_Spinner
+ACSN_SELECT_Options_Spinner=Options Spinner
 ACSD_SELECT_Options_Spinner=Options Spinner
-ACSN_SELECT_Visible_Options_Spinner=Visible_Options_Spinner
+ACSN_SELECT_Visible_Options_Spinner=Visible Options Spinner
 ACSD_SELECT_Visible_Options_Spinner=Visible Options Spinner
 ACSN_BUTTON_Form=Form
 ACSD_BUTTON_Form=Button Customizer Form
