#205062 filetoUrl in JBoss open the file stream to get URL

--- a/j2ee.common/src/org/netbeans/modules/j2ee/common/Bundle.properties
+++ b/j2ee.common/src/org/netbeans/modules/j2ee/common/Bundle.properties
@@ -39,10 +39,10 @@
 # However, if you add GPL Version 2 code and therefore, elected the GPL
 # Version 2 license, then the option applies only if the new code is
 # made subject to such option by the copyright holder.
-OpenIDE-Module-Name=J2EE Project Support Utilities
+OpenIDE-Module-Name=J2EE Support Utilities
 OpenIDE-Module-Display-Category=Java EE
-OpenIDE-Module-Short-Description=Utilities for J2EE projects
-OpenIDE-Module-Long-Description=Utilities for J2EE projects
+OpenIDE-Module-Short-Description=Utilities for J2EE
+OpenIDE-Module-Long-Description=Utilities for J2EE
 
 LBL_FQN_Title=Browse Class
 LBL_FQN_OK=OK
