Bug 209278 "Inheritance of C/C++ standard project properties doesn't work correctly" fix.

--- a/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
+++ b/cnd.makeproject/src/org/netbeans/modules/cnd/makeproject/api/configurations/Bundle.properties
@@ -123,6 +123,7 @@ BITS_64=64 Bits
 CPPStandardTxt=C++ Standard
 CPPStandardHint=C++11 or C++98 C++ standard
 STANDARD_DEFAULT=<Default>
+STANDARD_INHERITED=<Inherited>
 STANDARD_CPP98=C++98
 STANDARD_CPP11=C++11
 CStandardTxt=C Standard
