--- a/web.project/src/org/netbeans/modules/web/project/Bundle.properties
+++ b/web.project/src/org/netbeans/modules/web/project/Bundle.properties
@@ -120,6 +120,7 @@ TXT_cannotDebugWebservice=This is a web service implementation file. To debug, c
 #WebSources
 LBL_Node_DocBase=Web Pages
 LBL_Node_WebModule=Web Module
+# Do not translate
 LBL_Node_WebInf=WEB-INF
 
 # UI Logging
