--- a/web.project/src/org/netbeans/modules/web/project/ui/Bundle.properties
+++ b/web.project/src/org/netbeans/modules/web/project/ui/Bundle.properties
@@ -60,6 +60,7 @@ LBL_Node_Sources=Source Packages
 LBL_Node_DocBase=Web Pages
 LBL_Node_Config=Configuration Files
 LBL_Node_WebModule=Web Module
+# Do not translate
 LBL_Node_WebInf=WEB-INF
 
 #FolderListSettings
