Translatability issues - date/time format.

--- a/j2ee.dd.webservice/src/org/netbeans/modules/j2ee/dd/webservice/Bundle.properties
+++ b/j2ee.dd.webservice/src/org/netbeans/modules/j2ee/dd/webservice/Bundle.properties
@@ -40,7 +40,7 @@
 # Version 2 license, then the option applies only if the new code is
 # made subject to such option by the copyright holder.
 
-OpenIDE-Module-Name=Web Services DD API
+OpenIDE-Module-Name=Web Services Deployment Descriptor API
 OpenIDE-Module-Display-Category=Java EE
 OpenIDE-Module-Short-Description=Web Services Deployment Descriptor API.
 OpenIDE-Module-Long-Description=This module provides API for getting and manipulating deployment descriptors.
