--- a/j2ee.ddloaders/src/org/netbeans/modules/j2ee/ddloaders/Bundle.properties
+++ b/j2ee.ddloaders/src/org/netbeans/modules/j2ee/ddloaders/Bundle.properties
@@ -41,10 +41,10 @@
 # made subject to such option by the copyright holder.
 
 
-OpenIDE-Module-Name=J2EE DD Loaders
+OpenIDE-Module-Name=Java EE Deployment Descriptor Loaders
 OpenIDE-Module-Display-Category=Java EE
-OpenIDE-Module-Short-Description=J2EE Deployment Descriptors files loaders
-OpenIDE-Module-Long-Description=This module provides implementation for J2EE data loaders that can do dual editing synchronization.
+OpenIDE-Module-Short-Description=Java EE Deployment Descriptor files loaders
+OpenIDE-Module-Long-Description=This module provides implementation for Java EE data loaders that can do dual editing synchronization.
 
 
 DDLoadersResolver=Ejb Jar files
