Issue #209280 - BG Find usage prints a lot of exceptions in log

--- a/refactoring.api/src/org/netbeans/modules/refactoring/spi/impl/Bundle.properties
+++ b/refactoring.api/src/org/netbeans/modules/refactoring/spi/impl/Bundle.properties
@@ -169,3 +169,5 @@ ERR_ProjectNotOpened=Cannot refactor {0} that is defined outside of an open proj
 
 MSG_NoPatternsFound=No Patterns Found
 ParametersPanel.runInBackground.text=Run In Background
+MSG_Searching=Finding Usages...
+
