--- a/apisupport.wizards/src/org/netbeans/modules/apisupport/project/ui/wizard/loader/Bundle.properties
+++ b/apisupport.wizards/src/org/netbeans/modules/apisupport/project/ui/wizard/loader/Bundle.properties
@@ -46,8 +46,10 @@ LBL_LoaderWizardTitle=File Type
 # FileRecognitionPanel: texts of components
 LBL_FileRecognition_Title=File Recognition
 LBL_MimeType=&MIME Type\:
+# A radio button label. Preceded in UI by the section's title "File Recognition".
 LBL_ByExtension=by &Filename Extension
 LBL_Extension=&Extension(s)\:
+# A radio button label. Preceded in UI by the section's title "File Recognition".
 LBL_ByElement=by &XML Root Element
 LBL_Element=&Namespace\:
 
