--- a/openide.loaders/src/org/openide/loaders/Bundle.properties
+++ b/openide.loaders/src/org/openide/loaders/Bundle.properties
@@ -159,7 +159,7 @@ MSG_ObjectIsTooBig=The file {1} seems to be too large ({2,choice,0#{2}b|1024#{3}
 PROP_XmlLoader_Name=XML Configuration Files
 PROP_XmlError=Error (recoverable)
 PROP_XmlWarning=Warning
-PROP_XmlFatalError=FATAL ERROR
+PROP_XmlFatalError=Fatal Error
 ###PROP_XmlMessage=#{0} \"{1}\" [{2}:{3},{4}]
 PROP_XmlMessage=#{0} \"{1}\" [{2}:{3}]
 # ^^^ formatting of xml parser error message
