--- a/xml.multiview/src/org/netbeans/modules/xml/multiview/ui/Bundle.properties
+++ b/xml.multiview/src/org/netbeans/modules/xml/multiview/ui/Bundle.properties
@@ -65,7 +65,7 @@ LBL_Cancel_mnem=C
 
 LBL_OK_mnem=O
 
-TTL_warning=WARNING
+TTL_warning=Warning
 
 OPT_FixNow=&Fix Now
 
@@ -73,7 +73,7 @@ OPT_Refresh=&Refresh to Previous
 
 OPT_Save=&Save Anyway
 
-TTL_error=ERROR
+TTL_error=Error
 
 TTL_warning_message={0}\n\nSaving might cause unpredictable behaviour or invalid XML.
 
