Issue #196919 - [70cat] JUnit Test template unconditionally generates setUpClass()/tearDownClass()

--- a/java.testrunner/src/org/netbeans/modules/java/testrunner/Bundle.properties
+++ b/java.testrunner/src/org/netbeans/modules/java/testrunner/Bundle.properties
@@ -201,14 +201,14 @@ CommonTestsCfgOfCreate.chkTearDown.AD=Generate test finalizer method. The method
 
 # Generate @BeforeClass method
 CommonTestsCfgOfCreate.chkBeforeClass.text=\ Test Class Initializer
-CommonTestsCfgOfCreate.chkBeforeClass.toolTip=Generate @BeforeClass method
+CommonTestsCfgOfCreate.chkBeforeClass.toolTip=setUpClass() / @BeforeClass
 CommonTestsCfgOfCreate.chkBeforeClass.AN=Generate Test Class Initializer Method
 CommonTestsCfgOfCreate.chkBeforeClass.AD=Generate initialization method annotated with the BeforeClass annotation
 
 
 # Generate @AfterClass method
 CommonTestsCfgOfCreate.chkAfterClass.text=\ Test Class Finalizer
-CommonTestsCfgOfCreate.chkAfterClass.toolTip=Generate @AfterClass method
+CommonTestsCfgOfCreate.chkAfterClass.toolTip=tearDownClass() / @AfterClass
 CommonTestsCfgOfCreate.chkAfterClass.AN=Generate Test Class Finalizer Method
 CommonTestsCfgOfCreate.chkAfterClass.AD=Generate finalizer method annotated with the AfterClass annotation
 
