"Refresh"  test action

--- a/cnd.remote/src/org/netbeans/modules/remote/ui/Bundle.properties
+++ b/cnd.remote/src/org/netbeans/modules/remote/ui/Bundle.properties
@@ -47,3 +47,5 @@ OpenProjectTitle=Open Project at {0}
 PathMapperMenuItem=Path Mapper ...
 InvalidFolder={0} is not a valid folder
 ActionTestPerf=Test &Performance
+RefreshMenuItem=&Schedule file system refresh
+RefreshScheduled=File system refresh on {0} is scheduled
